--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   padding: 30px;
   display: flex;
@@ -7,20 +6,42 @@
 .App > div {
   margin-right: 50px;
 }
-
-.error {
-  border: red 1px solid;
+.todoList {
+  border: 1px solid green;
+  border-radius: 3px;
+  background-color: yellowgreen;
+  padding: 20px;
 }
-
-.error-message {
-  color: red;
+.tasks-list {
+  list-style: none;
+  padding: 0;
 }
-
-.active-filter {
-  background-color: aquamarine;
+.tasks-list-item {
+  display: flex;
+  justify-content: space-between;
 }
-
-.is-done {
+.buttons-block {
+  display: flex;
+  justify-content: space-between;
+}
+.todolist-header {
+  text-align: center;
+}
+.btn-filter-active {
+  background-color: coral;
+  color: white;
+  font-weight: bold;
+  border: coral 2px solid;
+}
+.task {
+  font-weight: bold;
+}
+.task-done {
+  font-weight: normal;
   opacity: 0.5;
+  text-decoration: line-through;
 }
-
+.user-error {
+  border: 2px solid red;
+  outline: none;
+}
